Flesh out all the steps I know (not many)

--- a/index.html
+++ b/index.html
@@ -12,23 +12,46 @@
 </head>
 <body>
 <div class="container">
-  <section>
-    <a id="welcome"></a>
-    <div class="jumbotron">
-      <h1>Welcome to Linkbot Labs!</h1>
-    </div>
+  <section><a id="welcome"></a>
   </section>
-  <section>
-    <a id="firmware"></a>
+  <section><a id="robot-update"></a>
+    <h2>Updating Robots</h2>
+    <p>
+      Robots are hecka sweet and all, but they <em>may</em> need to be
+      configured to work with this version of Linkbot Labs. This process
+      should take less than two minutes per robot.
+    <p> Let's get started:
+    <ol>
+      <li>
+        Plug in the robot via USB. It needs to be plugged in to be updated.
+      </li>
+      <li>
+        Take the chicken firmly by the head, laying it flat upon the altar.
+      </li>
+      <li>
+        Start the Updater program. There are two sets of instructions that
+        will help you find it:
+        <ul>
+          <li>
+            <a href="#windows7">Windows 7</a>
+          </li>
+          <li>
+            <a href="#windows8">Windows 8</a>
+          </li>
+        </ul>
+      </li>
+      <li><a id="updater-instructions"><a/>
+        [Instructions within the Robot Updater]
+      </li>
+    </ol>
   </section>
-  <section>
-    <a id="linkbot-labs"></a>
+  <section><a id="windows7"></a>
+    <h3>Windows 7: Starting the Updater</h3>
+    <a href="#updater-Instructions">Return to Updater instructions</a>
   </section>
-  <section>
-    <a id="lab-manager"></a>
-  </section>
-  <section>
-    <a id="apps"></a>
+  <section><a id="windows8"></a>
+    <h3>Windows 8: Starting the Updater</h3>
+    <a href="#updater-Instructions">Return to Updater instructions</a>
   </section>
 </div>
 </body>
