--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html>
+<html lang=en>
 <head>
-  <title>Welcome to Linkbot Labs</title>
+  <title>Linkbot Update Instructions</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="stylesheet"
         href="components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="index.css">
   <script src="components/jquery/dist/jquery.min.js"></script>
   <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="components/bootbox/bootbox.js"></script>
@@ -15,43 +16,51 @@
   <section><a id="welcome"></a>
   </section>
   <section><a id="robot-update"></a>
-    <h2>Updating Robots</h2>
+    <h1>Updating Linkbots</h1>
     <p>
-      Robots are hecka sweet and all, but they <em>may</em> need to be
-      configured to work with this version of Linkbot Labs. This process
-      should take less than two minutes per robot.
-    <p> Let's get started:
+      Linkbots <em>may</em> need to be configured to work with this version
+      of Linkbot Labs. If you aren't sure, just try using them in an app.
+      If you need to update them, you'll be taken back to this page.
+
+    <h2>Start</h2>
+    <p>This process should take less than two minutes per
+    robot. Let's get started:
     <ol>
       <li>
         Plug in the robot via USB. It needs to be plugged in to be updated.
       </li>
       <li>
-        Take the chicken firmly by the head, laying it flat upon the altar.
-      </li>
-      <li>
-        Start the Updater program. There are two sets of instructions that
-        will help you find it:
+        Start Linkbot Updater. There are two sets of instructions that will
+        help you do this:
         <ul>
           <li>
-            <a href="#windows7">Windows 7</a>
+            <a href="#windows7">Windows 7 users</a>
           </li>
           <li>
-            <a href="#windows8">Windows 8</a>
+            <a href="#windows8">Windows 8 users</a>
           </li>
         </ul>
       </li>
-      <li><a id="updater-instructions"><a/>
-        [Instructions within the Robot Updater]
+      <li>
+        Follow the instructions in Linkbot Updater.
       </li>
+      <div class="li-aside">
+        <span class="text-success">Done!</span>
+      </div>
     </ol>
+
   </section>
-  <section><a id="windows7"></a>
-    <h3>Windows 7: Starting the Updater</h3>
+  <section>
+    <a id="windows7">
+    </a>
+    <h3>Windows 7: Starting Linkbot Updater</h3>
     <a href="#updater-Instructions">Return to Updater instructions</a>
   </section>
-  <section><a id="windows8"></a>
-    <h3>Windows 8: Starting the Updater</h3>
-    <a href="#updater-Instructions">Return to Updater instructions</a>
+  <section>
+   <a id="windows8">
+   </a>
+   <h3>Windows 8: Starting Linkbot Updater</h3>
+   <a href="#updater-Instructions">Return to Updater instructions</a>
   </section>
 </div>
 </body>
