Convert windows instructions links to buttons

--- a/index.html
+++ b/index.html
@@ -24,20 +24,23 @@
 
     <h2>Start</h2>
     <p>This process should take less than two minutes per
-    robot. Let's get started:
+    robot.
     <ol>
-      <li>
-        Plug in the robot via USB. It needs to be plugged in to be updated.
-      </li>
       <li>
         Start Linkbot Updater. There are two sets of instructions that will
         help you do this:
-        <ul>
+        <ul class="windows-instructions">
           <li>
-            <a href="#windows7">Windows 7 users</a>
+            <button>
+              <img class="win-logo" src="windows7-logo.png" alt="">
+              Windows 7 users
+            </button>
           </li>
           <li>
-            <a href="#windows8">Windows 8 users</a>
+            <button>
+              <img class="win-logo" src="windows8-logo.png" alt="Windows 8">
+              users
+            </button>
           </li>
         </ul>
       </li>
@@ -48,19 +51,6 @@
         <span class="text-success">Done!</span>
       </div>
     </ol>
-
-  </section>
-  <section>
-    <a id="windows7">
-    </a>
-    <h3>Windows 7: Starting Linkbot Updater</h3>
-    <a href="#updater-Instructions">Return to Updater instructions</a>
-  </section>
-  <section>
-   <a id="windows8">
-   </a>
-   <h3>Windows 8: Starting Linkbot Updater</h3>
-   <a href="#updater-Instructions">Return to Updater instructions</a>
   </section>
 </div>
 </body>
