Add linkbot labs logo

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 </head>
 <body>
 <div class="container">
-  <section><a id="welcome"></a>
-  </section>
+  <a href="../index.html">
+    <img id="lllogo"
+         src="linkbot-labs-ER-logo-200x46px.png"
+         alt="Linkbot Labs Logo - return to Home">
+  </a>
   <section><a id="robot-update"></a>
     <h1>Updating Linkbots</h1>
     <p>
