Show/hide windows instructions

--- a/index.html
+++ b/index.html
@@ -34,17 +34,23 @@
         help you do this:
         <ul class="windows-instructions">
           <li>
-            <button>
+            <button class="show-win-7">
               <img class="win-logo" src="windows7-logo.png" alt="">
               Windows 7 users
             </button>
           </li>
           <li>
-            <button>
+            <button class="show-win-8">
               <img class="win-logo" src="windows8-logo.png" alt="Windows 8">
               users
             </button>
           </li>
+          <div class="hidden win-7-instructions">
+            [Windows 7 Instructions]
+          </div>
+          <div class="hidden win-8-instructions">
+            [Windows 8 Instructions]
+          </div>
         </ul>
       </li>
       <li>
