Make nicer windows buttons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </li>
           <li>
             <button class="show-win-8">
-              <img class="win-logo" src="windows8-logo.png" alt="Windows 8">
+              <img class="win-logo win-8" src="windows8-logo.png" alt="Windows 8">
               users
             </button>
           </li>
