--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     robot.
     <ol>
       <li>
-        Start Linkbot Updater. There are two sets of instructions that will
-        help you do this:
+        Start Linkbot Updater, which is included with Linkbot Labs. There
+        are two sets of instructions that will help you do this:
         <ul class="windows-instructions">
           <li>
             <button class="show-win-7">
