Write windows 8 section

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
       Linkbots <em>may</em> need to be configured to work with this version
       of Linkbot Labs. If you aren't sure, just try using them in an app.
       If you need to update them, you'll be taken back to this page.
+    </p>
 
     <h2>Start</h2>
-    <p>This process should take less than two minutes per
-    robot.
+    <p>
+      This process should take less than two minutes per robot.
+    </p>
     <ol>
       <li>
         Start Linkbot Updater, which is included with Linkbot Labs. There
@@ -45,21 +47,55 @@
               users
             </button>
           </li>
-          <div class="hidden win-7-instructions">
-            [Windows 7 Instructions]
-          </div>
-          <div class="hidden win-8-instructions">
-            [Windows 8 Instructions]
-          </div>
         </ul>
+        <dl class="hidden win-7-instructions row">
+          <dt class="col-sm-6">
+            Open the Start Menu and find the Barobo list
+          </dt>
+          <dd class="col-sm-6">
+            <img src="win-7-screenshots/start-menu.png">
+          </dd>
+          <dt class="col-sm-6">
+            Butts
+          </dt>
+          <dd class="col-sm-6">
+            yes butts
+          </dd>
+          <dt class="col-sm-6">
+            Butts
+          </dt>
+          <dd class="col-sm-6">
+            yes butts
+          </dd>
+        </dl>
+        <dl class="hidden win-8-instructions row">
+          <dt class="col-sm-3">
+            If the desktop is visible, click the Start icon
+          </dt>
+          <dd class="col-sm-9">
+            <img src="win-8-screenshots/desktop.png">
+          </dd>
+          <dt class="col-sm-3">
+            From the Start page, click the Search icon
+          </dt>
+          <dd class="col-sm-9">
+            <img src="win-8-screenshots/start.png">
+          </dd>
+          <dt class="col-sm-3">
+            In the search bar, type "Linkbot Updater". When it appears in
+            the list, click on it to continue.
+          </dt>
+          <dd class="col-sm-9">
+            <img src="win-8-screenshots/search.png">
+          </dd>
+        </dl>
       </li>
       <li>
-        Follow the instructions in Linkbot Updater.
+        Once Linkbot Updater is running, it will talk you through the rest
+        of the process. (It's quick.)
       </li>
-      <div class="li-aside">
-        <span class="text-success">Done!</span>
-      </div>
     </ol>
+    <h2 class="text-success"><i>Done!</i></h2>
   </section>
 </div>
 </body>
