Add Windows 7 instructions

--- a/index.html
+++ b/index.html
@@ -49,23 +49,12 @@
           </li>
         </ul>
         <dl class="hidden win-7-instructions row">
-          <dt class="col-sm-6">
-            Open the Start Menu and find the Barobo list
+          <dt class="col-sm-3">
+            Open the Start Menu and search for "Linkbot Updater". Run the
+            program to continue.
           </dt>
-          <dd class="col-sm-6">
-            <img src="win-7-screenshots/start-menu.png">
-          </dd>
-          <dt class="col-sm-6">
-            Butts
-          </dt>
-          <dd class="col-sm-6">
-            yes butts
-          </dd>
-          <dt class="col-sm-6">
-            Butts
-          </dt>
-          <dd class="col-sm-6">
-            yes butts
+          <dd class="col-sm-9">
+            <img src="win-7-screenshots/search.png">
           </dd>
         </dl>
         <dl class="hidden win-8-instructions row">
