--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <div class="container">
-  <a href="../index.html">
+  <a href="/index.html">
     <img id="lllogo"
          src="linkbot-labs-ER-logo-200x46px.png"
          alt="Linkbot Labs Logo - return to Home">
